--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "paypal/rest-api-sdk-php": "*",
         "stripe/stripe-php": "^7.112",
         "tymon/jwt-auth": "^1.0"
     },
