Add amount to stripe refund

--- a/.env.example
+++ b/.env.example
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@sandbox24a1398941bb441cbf6f03f0e2e560a1.mailgun.org
+MAIL_PASSWORD=1f64bf1dae8fd7005e317884593ae747-b2f5ed24-d51bbc80
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=tom.brown@omniautomotive.co.uk
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
