--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "cybersource/rest-client-php": "^0.0.33",
         "darkaonline/l5-swagger": "^8.0",
         "doctrine/dbal": "^3.3",
         "elasticsearch/elasticsearch": "~5.1",
